--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
                       </ul>
                     </li>
                     <li class="has-children">
-                      <a href="about.html">Company</a>
+                      <a href="about.html">The Team</a>
                       <ul class="dropdown arrow-top">
-                        <li><a href="#">Menu One</a></li>
-                        <li><a href="#">Menu Two</a></li>
-                        <li><a href="#">Menu Three</a></li>
+                        <li><a href="#">Year 22-23</a></li>
+                        <li><a href="#">Year 23-24</a></li>
+                        <li><a href="#">Year 24-25</a></li>
                       </ul>
                     </li>
                     <li><a href="news.html">News</a></li>
@@ -117,9 +117,9 @@
         <div class="container">
           <div class="row align-items-center justify-content-center text-center">
             <div class="col-md-10">
-              <h1 class="mb-5">Specialized Technical <strong>Solutions</strong></h1>
+              <h1 class="mb-5">Academic & Industrial Space Mission <strong>Solutions</strong></h1>
               <p>
-                <a href="#" class="btn btn-primary py-3 px-5 rounded-0">Download</a>
+                <a href="#" class="btn btn-primary py-3 px-5 rounded-0">Download Newest Datasheet</a>
                 <a href="#" class="btn btn-white btn-outline-white py-3 px-5 rounded-0">Get In Touch</a>
               </p>
             </div>
