--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="container">
           <div class="row align-items-center justify-content-center text-center">
             <div class="col-md-10">
-              <h1 class="mb-5">Academic & Industrial Space Mission <strong>Solutions</strong></h1>
+              <h1 class="mb-5">Academic Space Mission <strong>Solutions</strong></h1>
               <p>
                 <a href="#" class="btn btn-primary py-3 px-5 rounded-0">Download Newest Datasheet</a>
                 <a href="#" class="btn btn-white btn-outline-white py-3 px-5 rounded-0">Get In Touch</a>
@@ -131,9 +131,9 @@
         <div class="container">
           <div class="row align-items-center justify-content-center text-center">
             <div class="col-md-10">
-              <h1 class="mb-5">Specialized Technical <strong>Solutions</strong></h1>
+              <h1 class="mb-5">Industrial Space Mission <strong>Solutions</strong></h1>
               <p>
-                <a href="#" class="btn btn-primary py-3 px-5 rounded-0">Download</a>
+                <a href="#" class="btn btn-primary py-3 px-5 rounded-0">Download Newest Datasheet</a>
                 <a href="#" class="btn btn-white btn-outline-white py-3 px-5 rounded-0">Get In Touch</a>
               </p>
             </div>
